--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="page-header">
       <!-- навигация -->
-      <nav class="container">
+      <nav class="container-header">
         <a href="./index.html" class="logo"
           ><span class="logo-web">Web</span>
           <span class="logo-studio">Studio</span>
@@ -58,7 +58,7 @@
     <main>
       <!-- герой -->
 
-      <section class="container">
+      <section class="container-hero">
         <h1 class="hero-title">
           эффективные решения <br />
           для вашего бизнеса
@@ -68,7 +68,7 @@
 
       <!-- наши преимущества (нужно скрыть) -->
       <section class="section">
-        <div class="container">
+        <div class="container-advantages">
           <!-- <h2 class="section-title">наши преимущества</h2> -->
           <ul class="advantages list">
             <li>
@@ -109,116 +109,130 @@
 
       <!-- Чем мы занимаемся -->
       <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="whatdoing list">
-          <li>
-            <img src="images/img011.jpg" alt="ноутбук" width="370" />
-            <h3 class="whatdoing-title">Десктопные приложения</h3>
-          </li>
-          <li>
-            <img src="images/img012.jpg" alt="смартфон" width="370" />
-            <h3 class="whatdoing-title">Мобильные приложения</h3>
-          </li>
-          <li>
-            <img src="images/img013.jpg" alt="компютер" width="370" />
-            <h3 class="whatdoing-title">Дизайнерские решения</h3>
-          </li>
-        </ul>
+        <div class="conteiner-whatdoing">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="whatdoing list">
+            <li>
+              <img src="images/img011.jpg" alt="ноутбук" width="370" />
+              <h3 class="whatdoing-title">Десктопные приложения</h3>
+            </li>
+            <li>
+              <img src="images/img012.jpg" alt="смартфон" width="370" />
+              <h3 class="whatdoing-title">Мобильные приложения</h3>
+            </li>
+            <li>
+              <img src="images/img013.jpg" alt="компютер" width="370" />
+              <h3 class="whatdoing-title">Дизайнерские решения</h3>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Наша команда -->
       <section class="section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team list">
-          <li>
-            <img src="./images/john.jpg" alt="фото джона" width="270" />
-            <h3 class="team-title">John Smith</h3>
-            <p class="specialization">Product Designer</p>
-            <ul>
-              <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
-              <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-              <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-              <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
-            </ul>
-          </li>
+        <div class="conteiner-team">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team list">
+            <li>
+              <img src="./images/john.jpg" alt="фото джона" width="270" />
+              <h3 class="team-title">John Smith</h3>
+              <p class="specialization">Product Designer</p>
+              <ul>
+                <li>
+                  <a href="" aria-label="ссылка на инстаграм">instagram</a>
+                </li>
+                <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
+                <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
+                <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
+              </ul>
+            </li>
 
-          <li>
-            <img src="./images/marta.jpg" alt="фото марты" width="270" />
-            <h3 class="team-title">Marta Stewart</h3>
-            <p class="specialization">Frontend Developer</p>
-            <ul>
-              <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
-              <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-              <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-              <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
-            </ul>
-          </li>
+            <li>
+              <img src="./images/marta.jpg" alt="фото марты" width="270" />
+              <h3 class="team-title">Marta Stewart</h3>
+              <p class="specialization">Frontend Developer</p>
+              <ul>
+                <li>
+                  <a href="" aria-label="ссылка на инстаграм">instagram</a>
+                </li>
+                <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
+                <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
+                <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
+              </ul>
+            </li>
 
-          <li>
-            <img src="./images/robert.jpg" alt="фото роберта" width="270" />
-            <h3 class="team-title">Robert Jakis</h3>
-            <p class="specialization">Marketing</p>
-            <ul>
-              <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
-              <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-              <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-              <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
-            </ul>
-          </li>
+            <li>
+              <img src="./images/robert.jpg" alt="фото роберта" width="270" />
+              <h3 class="team-title">Robert Jakis</h3>
+              <p class="specialization">Marketing</p>
+              <ul>
+                <li>
+                  <a href="" aria-label="ссылка на инстаграм">instagram</a>
+                </li>
+                <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
+                <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
+                <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
+              </ul>
+            </li>
 
-          <li>
-            <img src="./images/martin.jpg" alt="фото мартина" width="270" />
-            <h3 class="team-title">Martin Doe</h3>
-            <p class="specialization">UI Designer</p>
-            <ul>
-              <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
-              <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-              <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-              <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
-            </ul>
-          </li>
-        </ul>
+            <li>
+              <img src="./images/martin.jpg" alt="фото мартина" width="270" />
+              <h3 class="team-title">Martin Doe</h3>
+              <p class="specialization">UI Designer</p>
+              <ul>
+                <li>
+                  <a href="" aria-label="ссылка на инстаграм">instagram</a>
+                </li>
+                <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
+                <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
+                <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Постоянные клиенты (нужно скрыть)-->
       <section class="section">
-        <h2 class="section-title">Постоянные клиенты</h2>
-        <ul class="list">
-          <li>
-            <a href=""
-              ><img src="./images/dclient1.svg" alt="партнер1" width="170"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/dclient2.svg" alt="партнер2" width="170"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/dclient3.svg" alt="партнер3" width="170"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/dclient4.svg" alt="партнер4" width="170"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/dclient5.svg" alt="партнер5" width="170"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/dclient6.svg" alt="партнер6" width="170"
-            /></a>
-          </li>
-        </ul>
+        <div class="conteiner-client">
+          <!-- <h2 class="section-title">Постоянные клиенты</h2> -->
+          <ul class="list">
+            <li>
+              <a href=""
+                ><img src="./images/dclient1.svg" alt="партнер1" width="170"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/dclient2.svg" alt="партнер2" width="170"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/dclient3.svg" alt="партнер3" width="170"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/dclient4.svg" alt="партнер4" width="170"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/dclient5.svg" alt="партнер5" width="170"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/dclient6.svg" alt="партнер6" width="170"
+              /></a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-    <footer>
+    <footer class="page-header">
       <a href="./index.html" class="logo"
         ><span class="logo-web">Web</span>
         <span class="logo-footstudio">Studio</span></a
