--- a/index.html
+++ b/index.html
@@ -233,33 +233,35 @@
     </main>
 
     <footer class="page-header">
-      <a href="./index.html" class="logo"
-        ><span class="logo-web">Web</span>
-        <span class="logo-footstudio">Studio</span></a
-      >
+      <div class="container-footer">
+        <a href="./index.html" class="logo"
+          ><span class="logo-web">Web</span>
+          <span class="logo-footstudio">Studio</span>
+        </a>
 
-      <address>
-        <ul class="footaddres list">
-          <li class="footaddres-local">г. Киев, пр-т Леси Украинки, 26</li>
-          <li class="footaddres">info@devstudio.com</li>
-          <li class="footaddres">+38 096 111 11 11</li>
+        <address class="container-footaddres">
+          <ul class="footaddres list">
+            <li class="footaddres-local">г. Киев, пр-т Леси Украинки, 26</li>
+            <li class="footaddres">info@devstudio.com</li>
+            <li class="footaddres">+38 096 111 11 11</li>
+          </ul>
+        </address>
+
+        <h3 class="acall">присоединяйтесь</h3>
+        <ul class="list">
+          <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
+          <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
+          <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
+          <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
         </ul>
-      </address>
 
-      <h3 class="acall">присоединяйтесь</h3>
-      <ul class="list">
-        <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
-        <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-        <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-        <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
-      </ul>
+        <b class="acall">Подпишитесь на рассылку</b>
+        <a href="" class="button">Подписаться</a>
 
-      <b class="acall">Подпишитесь на рассылку</b>
-      <a href="" class="button">Подписаться</a>
-
-      <p class="rights">
-        2020 | Developed by GoIT Students
-      </p>
+        <p class="rights">
+          2020 | Developed by GoIT Students
+        </p>
+      </div>
     </footer>
   </body>
 </html>
