--- a/index.html
+++ b/index.html
@@ -18,22 +18,23 @@
   <body>
     <header class="page-header">
       <!-- навигация -->
-      <nav class="container-header">
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span>
-          <span class="logo-studio">Studio</span>
-        </a>
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span>
+            <span class="logo-studio">Studio</span>
+          </a>
 
-        <ul class="site-nav list">
-          <li><a href="" class="site-nav link current">Студия</a></li>
-          <li>
-            <a href="./portfolio.html" class="site-nav link">Портфолио</a>
-          </li>
-          <li><a href="" class="site-nav link">Контакты</a></li>
-        </ul>
+          <ul class="site-nav list">
+            <li><a href="" class="site-nav link current">Студия</a></li>
+            <li>
+              <a href="./portfolio.html" class="site-nav link">Портфолио</a>
+            </li>
+            <li><a href="" class="site-nav link">Контакты</a></li>
+          </ul>
 
-        <!-- адрес -->
-        <div class="container-addres">
+          <!-- адрес -->
+
           <address>
             <ul class="adress-nav list">
               <li>
@@ -51,14 +52,15 @@
               </li>
             </ul>
           </address>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </header>
 
     <main>
       <!-- герой -->
 
-      <section class="container-hero">
+      <section class="hero">
+        <!-- <img src="" alt="" /> -->
         <h1 class="hero-title">
           эффективные решения <br />
           для вашего бизнеса
@@ -67,8 +69,8 @@
       </section>
 
       <!-- наши преимущества (нужно скрыть) -->
-      <section class="section">
-        <div class="container-advantages">
+      <section class="advantages">
+        <div class="container">
           <!-- <h2 class="section-title">наши преимущества</h2> -->
           <ul class="advantages list">
             <li>
@@ -108,8 +110,8 @@
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section class="section">
-        <div class="conteiner-whatdoing">
+      <section class="whatdoing">
+        <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="whatdoing list">
             <li>
@@ -129,8 +131,8 @@
       </section>
 
       <!-- Наша команда -->
-      <section class="section">
-        <div class="conteiner-team">
+      <section class="team">
+        <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team list">
             <li>
@@ -193,9 +195,9 @@
       </section>
 
       <!-- Постоянные клиенты (нужно скрыть)-->
-      <section class="section">
-        <div class="conteiner-client">
-          <!-- <h2 class="section-title">Постоянные клиенты</h2> -->
+      <section class="client">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="list">
             <li>
               <a href=""
@@ -232,31 +234,37 @@
       </section>
     </main>
 
-    <footer class="page-header">
-      <div class="container-footer">
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span>
-          <span class="logo-footstudio">Studio</span>
-        </a>
+    <footer class="footer">
+      <div class="container">
+        <div>
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span>
+            <span class="logo-footstudio">Studio</span>
+          </a>
 
-        <address class="container-footaddres">
-          <ul class="footaddres list">
-            <li class="footaddres-local">г. Киев, пр-т Леси Украинки, 26</li>
-            <li class="footaddres">info@devstudio.com</li>
-            <li class="footaddres">+38 096 111 11 11</li>
+          <address class="footaddres">
+            <ul class="footaddres list">
+              <li class="footaddres-local">г. Киев, пр-т Леси Украинки, 26</li>
+              <li class="footaddres">info@devstudio.com</li>
+              <li class="footaddres">+38 096 111 11 11</li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="soсiallink">
+          <h3 class="acall">присоединяйтесь</h3>
+          <ul class="list">
+            <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
+            <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
+            <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
+            <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
           </ul>
-        </address>
+        </div>
 
-        <h3 class="acall">присоединяйтесь</h3>
-        <ul class="list">
-          <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
-          <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-          <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-          <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
-        </ul>
-
-        <b class="acall">Подпишитесь на рассылку</b>
-        <a href="" class="button">Подписаться</a>
+        <div>
+          <b class="acall">Подпишитесь на рассылку</b>
+          <a href="" class="button">Подписаться</a>
+        </div>
 
         <p class="rights">
           2020 | Developed by GoIT Students
