--- a/portfolio.html
+++ b/portfolio.html
@@ -205,34 +205,42 @@
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html" class="logo"
-        ><span class="logo-web">Web</span>
-        <span class="logo-footstudio">Studio</span></a
-      >
+    <footer class="footer">
+      <div class="container">
+        <div>
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span>
+            <span class="logo-footstudio">Studio</span>
+          </a>
 
-      <address>
-        <ul class="footaddres list">
-          <li class="footaddres-local">г. Киев, пр-т Леси Украинки, 26</li>
-          <li class="footaddres">info@devstudio.com</li>
-          <li class="footaddres">+38 096 111 11 11</li>
-        </ul>
-      </address>
+          <address class="footaddres">
+            <ul class="footaddres list">
+              <li class="footaddres-local">г. Киев, пр-т Леси Украинки, 26</li>
+              <li class="footaddres">info@devstudio.com</li>
+              <li class="footaddres">+38 096 111 11 11</li>
+            </ul>
+          </address>
+        </div>
 
-      <h3 class="acall">присоединяйтесь</h3>
-      <ul class="list">
-        <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
-        <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-        <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-        <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
-      </ul>
+        <div class="soсiallink">
+          <h3 class="acall">присоединяйтесь</h3>
+          <ul class="list">
+            <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
+            <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
+            <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
+            <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
+          </ul>
+        </div>
 
-      <b class="acall">Подпишитесь на рассылку</b>
-      <a href="" class="button">Подписаться</a>
+        <div>
+          <b class="acall">Подпишитесь на рассылку</b>
+          <a href="" class="button">Подписаться</a>
+        </div>
 
-      <p class="rights">
-        2020 | Developed by GoIT Students
-      </p>
+        <p class="rights">
+          2020 | Developed by GoIT Students
+        </p>
+      </div>
     </footer>
   </body>
 </html>
