--- a/portfolio.html
+++ b/portfolio.html
@@ -18,20 +18,23 @@
   <body>
     <header class="page-header">
       <!-- навигация -->
-      <nav class="container-nav">
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span>
-          <span class="logo-studio">Studio</span>
-        </a>
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span>
+            <span class="logo-studio">Studio</span>
+          </a>
 
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="site-nav link">Студия</a></li>
-          <li><a href="" class="site-nav link current">Портфолио</a></li>
-          <li><a href="" class="site-nav link">Контакты</a></li>
-        </ul>
+          <ul class="site-nav list">
+            <li><a href="./portfolio.html" class="site-nav link">Студия</a></li>
+            <li>
+              <a href="" class="site-nav link current">Портфолио</a>
+            </li>
+            <li><a href="" class="site-nav link">Контакты</a></li>
+          </ul>
 
-        <!-- адрес -->
-        <div class="container-addres">
+          <!-- адрес -->
+
           <address>
             <ul class="adress-nav list">
               <li>
@@ -49,159 +52,165 @@
               </li>
             </ul>
           </address>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </header>
 
     <main>
       <!-- портфолио наши работы -->
-      <section>
-        <h1>ourwork</h1>
-        <ul class="button-nav list">
-          <li><button type="button" class="link">Все</button></li>
-          <li><button type="button" class="link">Веб-сайты</button></li>
-          <li><button type="button" class="link">Приложения</button></li>
-          <li><button type="button" class="link">Дизайн</button></li>
-          <li><button type="button" class="link">Маркетинг</button></li>
-        </ul>
-        <ul class="ourwork list">
-          <li>
-            <a href=""
-              ><img src="./images/portfolio-noutbook.jpg" alt="ноубук" />
-              <h3 class="ourwork-title">Технокряк</h3>
-              <p class="ourwork-direction">Веб-сайт</p>
-              <p class="ourwork-explanation">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/portfolio-bascket.jpg"
-                alt="баскетболист"
-                width="370"
-              />
-              <h3 class="ourwork-title">Постер New Orlean vs Golden Star</h3>
-              <p class="ourwork-direction">Дизайн</p>
-              <p class="ourwork-explanation">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/portfolio-fish.jpg"
-                alt="морская еда"
-                width="370"
-              />
-              <h3 class="ourwork-title">Ресторан Seafood</h3>
-              <p class="ourwork-direction">Приложение</p>
-              <p class="ourwork-explanation">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/portfolio-headphones.jpg"
-                alt="наушники"
-                width="370"
-              />
-              <h3 class="ourwork-title">Проект Prime</h3>
-              <p class="ourwork-direction">Маркетинг</p>
-              <p class="ourwork-explanation">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/portfolio-boxes.jpg"
-                alt="коробки"
-                width="370"
-              />
-              <h3 class="ourwork-title">Проект Boxes</h3>
-              <p class="ourwork-direction">Приложение</p>
-              <p class="ourwork-explanation">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/portfolio-imac.jpg" alt="аймак" width="370" />
-              <h3 class="ourwork title">Inspiration has no Borders</h3>
-              <p class="ourwork-direction">Веб-сайт</p>
-              <p class="ourwork-explanation">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/portfolio-magazine.jpg"
-                alt="журнал"
-                width="370"
-              />
-              <h3 class="ourwork-title">Издание Limited Edition</h3>
-              <p class="ourwork-direction">Дизайн</p>
-              <p class="ourwork-explanation">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/portfolio-lable.jpg"
-                alt="итикетка"
-                width="370"
-              />
-              <h3 class="ourwork-title">Проект LAB</h3>
-              <p class="ourwork-direction">Маркетинг</p>
-              <p class="ourwork-explanation">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/portfolio-heandlaptop.jpg"
-                alt="лептоп"
-                width="370"
-              />
-              <h3 class="ourwork-title">Growing Business</h3>
-              <p class="ourwork-direction">Приложение</p>
-              <p class="ourwork-explanation">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-        </ul>
+      <section class="ourwork">
+        <div class="container">
+          <!-- <h1>ourwork</h1> -->
+          <ul class="button-nav list">
+            <li><button type="button" class="link">Все</button></li>
+            <li><button type="button" class="link">Веб-сайты</button></li>
+            <li><button type="button" class="link">Приложения</button></li>
+            <li><button type="button" class="link">Дизайн</button></li>
+            <li><button type="button" class="link">Маркетинг</button></li>
+          </ul>
+          <ul class="ourwork list">
+            <li>
+              <a href=""
+                ><img src="./images/portfolio-noutbook.jpg" alt="ноубук" />
+                <h3 class="ourwork-title">Технокряк</h3>
+                <p class="ourwork-direction">Веб-сайт</p>
+                <p class="ourwork-explanation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/portfolio-bascket.jpg"
+                  alt="баскетболист"
+                  width="370"
+                />
+                <h3 class="ourwork-title">Постер New Orlean vs Golden Star</h3>
+                <p class="ourwork-direction">Дизайн</p>
+                <p class="ourwork-explanation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/portfolio-fish.jpg"
+                  alt="морская еда"
+                  width="370"
+                />
+                <h3 class="ourwork-title">Ресторан Seafood</h3>
+                <p class="ourwork-direction">Приложение</p>
+                <p class="ourwork-explanation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/portfolio-headphones.jpg"
+                  alt="наушники"
+                  width="370"
+                />
+                <h3 class="ourwork-title">Проект Prime</h3>
+                <p class="ourwork-direction">Маркетинг</p>
+                <p class="ourwork-explanation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/portfolio-boxes.jpg"
+                  alt="коробки"
+                  width="370"
+                />
+                <h3 class="ourwork-title">Проект Boxes</h3>
+                <p class="ourwork-direction">Приложение</p>
+                <p class="ourwork-explanation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/portfolio-imac.jpg"
+                  alt="аймак"
+                  width="370"
+                />
+                <h3 class="ourwork title">Inspiration has no Borders</h3>
+                <p class="ourwork-direction">Веб-сайт</p>
+                <p class="ourwork-explanation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/portfolio-magazine.jpg"
+                  alt="журнал"
+                  width="370"
+                />
+                <h3 class="ourwork-title">Издание Limited Edition</h3>
+                <p class="ourwork-direction">Дизайн</p>
+                <p class="ourwork-explanation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/portfolio-lable.jpg"
+                  alt="итикетка"
+                  width="370"
+                />
+                <h3 class="ourwork-title">Проект LAB</h3>
+                <p class="ourwork-direction">Маркетинг</p>
+                <p class="ourwork-explanation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/portfolio-heandlaptop.jpg"
+                  alt="лептоп"
+                  width="370"
+                />
+                <h3 class="ourwork-title">Growing Business</h3>
+                <p class="ourwork-direction">Приложение</p>
+                <p class="ourwork-explanation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
