--- a/index.html
+++ b/index.html
@@ -19,25 +19,27 @@
     <header class="page-header">
       <!-- навигация -->
       <div class="container">
-        <nav>
-          <a href="./index.html" class="logo"
+        <nav class="navigation">
+          <a href="./index.html" class="logoheader"
             ><span class="logo-web">Web</span>
             <span class="logo-studio">Studio</span>
           </a>
 
           <ul class="site-nav list">
-            <li><a href="" class="site-nav link current">Студия</a></li>
-            <li>
+            <li class="item">
+              <a href="" class="site-nav link current">Студия</a>
+            </li>
+            <li class="item">
               <a href="./portfolio.html" class="site-nav link">Портфолио</a>
             </li>
-            <li><a href="" class="site-nav link">Контакты</a></li>
+            <li class="item"><a href="" class="site-nav link">Контакты</a></li>
           </ul>
 
           <!-- адрес -->
 
-          <address>
+          <address class="adress">
             <ul class="adress-nav list">
-              <li>
+              <li class="item">
                 <a
                   href="mailto:info@devstudio.com "
                   class="adress-nav link"
@@ -45,10 +47,10 @@
                   >info@devstudio.com
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="tel:+380961111111" class="adress-nav link"
-                  >+38 096 111 11 11</a
-                >
+                  >+38 096 111 11 11
+                </a>
               </li>
             </ul>
           </address>
@@ -71,9 +73,9 @@
       <!-- наши преимущества (нужно скрыть) -->
       <section class="advantages">
         <div class="container">
-          <!-- <h2 class="section-title">наши преимущества</h2> -->
+          <h2 class="section-title">наши преимущества</h2>
           <ul class="advantages list">
-            <li>
+            <li class="item">
               <img src="./images/satelite-dish.svg" alt="спутниковая антена" />
               <h3 class="title">Внимание к деталям</h3>
               <p class="description">
@@ -81,7 +83,7 @@
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/clock.svg" alt="часы" />
               <h3 class="title">Пунктуальность</h3>
               <p class="description">
@@ -89,7 +91,7 @@
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/diagram.svg" alt="диаграмма" />
               <h3 class="title">Планирование</h3>
               <p class="description">
@@ -97,7 +99,7 @@
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/astronaut.svg" alt="астронавт" />
               <h3 class="title">Современные технологии</h3>
               <p class="description">
