--- a/portfolio.html
+++ b/portfolio.html
@@ -19,25 +19,27 @@
     <header class="page-header">
       <!-- навигация -->
       <div class="container">
-        <nav>
-          <a href="./index.html" class="logo"
+        <nav class="navigation">
+          <a href="./index.html" class="logoheader"
             ><span class="logo-web">Web</span>
             <span class="logo-studio">Studio</span>
           </a>
 
           <ul class="site-nav list">
-            <li><a href="./portfolio.html" class="site-nav link">Студия</a></li>
-            <li>
+            <li class="item">
+              <a href="./index.html" class="site-nav link">Студия</a>
+            </li>
+            <li class="item">
               <a href="" class="site-nav link current">Портфолио</a>
             </li>
-            <li><a href="" class="site-nav link">Контакты</a></li>
+            <li class="item"><a href="" class="site-nav link">Контакты</a></li>
           </ul>
 
           <!-- адрес -->
 
-          <address>
+          <address class="adress">
             <ul class="adress-nav list">
-              <li>
+              <li class="item">
                 <a
                   href="mailto:info@devstudio.com "
                   class="adress-nav link"
@@ -45,10 +47,10 @@
                   >info@devstudio.com
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="tel:+380961111111" class="adress-nav link"
-                  >+38 096 111 11 11</a
-                >
+                  >+38 096 111 11 11
+                </a>
               </li>
             </ul>
           </address>
