--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!-- наши преимущества (нужно скрыть) -->
       <section class="advantages">
         <div class="container">
-          <h2 class="section-title">наши преимущества</h2>
+          <!-- <h2 class="section-title">наши преимущества</h2> -->
           <ul class="advantages list">
             <li class="item">
               <img src="./images/satelite-dish.svg" alt="спутниковая антена" />
