--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!-- наши преимущества (нужно скрыть) -->
       <section class="advantages">
         <div class="container">
-          <!-- <h2 class="section-title">наши преимущества</h2> -->
+          <h2 class="section-hide">наши преимущества</h2>
           <ul class="advantages list">
             <li class="item">
               <img src="./images/satelite-dish.svg" alt="спутниковая антена" />
@@ -116,17 +116,29 @@
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="whatdoing list">
-            <li>
-              <img src="images/img011.jpg" alt="ноутбук" width="370" />
-              <h3 class="whatdoing-title">Десктопные приложения</h3>
+            <li class="whatdoing-item">
+              <a class="whatdoing-list" href="">
+                <div class="whatdoing-image">
+                  <img src="images/img011.jpg" alt="ноутбук" width="370" />
+                </div>
+                <h3 class="whatdoing-title">Десктопные приложения</h3>
+              </a>
             </li>
-            <li>
-              <img src="images/img012.jpg" alt="смартфон" width="370" />
-              <h3 class="whatdoing-title">Мобильные приложения</h3>
+            <li class="whatdoing-item">
+              <a class="whatdoing-list" href="">
+                <div class="whatdoing-image">
+                  <img src="images/img012.jpg" alt="смартфон" width="370" />
+                </div>
+                <h3 class="whatdoing-title">Мобильные приложения</h3>
+              </a>
             </li>
-            <li>
-              <img src="images/img013.jpg" alt="компютер" width="370" />
-              <h3 class="whatdoing-title">Дизайнерские решения</h3>
+            <li class="whatdoing-item">
+              <a class="whatdoing-list" href="">
+                <div class="whatdoing-image">
+                  <img src="images/img013.jpg" alt="компютер" width="370" />
+                </div>
+                <h3 class="whatdoing-title">Дизайнерские решения</h3>
+              </a>
             </li>
           </ul>
         </div>
@@ -136,67 +148,147 @@
       <section class="team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="team list">
-            <li>
-              <img src="./images/john.jpg" alt="фото джона" width="270" />
-              <h3 class="team-title">John Smith</h3>
-              <p class="specialization">Product Designer</p>
-              <ul>
-                <li>
-                  <a href="" aria-label="ссылка на инстаграм">instagram</a>
-                </li>
-                <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-                <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-                <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
-              </ul>
+          <ul class="team-list">
+            <li class="team-item">
+              <div class="team-photo">
+                <img src="./images/john.jpg" alt="фото джона" width="270" />
+              </div>
+              <div class="team-info">
+                <h3 class="team-title">John Smith</h3>
+                <p class="specialization">Product Designer</p>
+                <ul class="social-network">
+                  <li class="social-img">
+                    <a href=""
+                      ><img
+                        src="./images/instagram.svg"
+                        alt="ссылка на инстаграм"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/tvitter.svg" alt="ссылка на твиттер"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/fasebook.svg" alt="ссылка на фейсбук"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/in.svg" alt="ссылка на линкедин"
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
-            <li>
-              <img src="./images/marta.jpg" alt="фото марты" width="270" />
-              <h3 class="team-title">Marta Stewart</h3>
-              <p class="specialization">Frontend Developer</p>
-              <ul>
-                <li>
-                  <a href="" aria-label="ссылка на инстаграм">instagram</a>
-                </li>
-                <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-                <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-                <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
-              </ul>
+            <li class="team-item">
+              <div class="team-photo">
+                <img src="./images/marta.jpg" alt="фото марты" width="270" />
+              </div>
+              <div class="team-info">
+                <h3 class="team-title">Marta Stewart</h3>
+                <p class="specialization">Frontend Developer</p>
+                <ul class="social-network">
+                  <li class="social-img">
+                    <a href=""
+                      ><img
+                        src="./images/instagram.svg"
+                        alt="ссылка на инстаграм"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/tvitter.svg" alt="ссылка на твиттер"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/fasebook.svg" alt="ссылка на фейсбук"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/in.svg" alt="ссылка на линкедин"
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
-            <li>
-              <img src="./images/robert.jpg" alt="фото роберта" width="270" />
-              <h3 class="team-title">Robert Jakis</h3>
-              <p class="specialization">Marketing</p>
-              <ul>
-                <li>
-                  <a href="" aria-label="ссылка на инстаграм">instagram</a>
-                </li>
-                <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-                <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-                <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
-              </ul>
+            <li class="team-item">
+              <div class="team-photo">
+                <img src="./images/robert.jpg" alt="фото роберта" width="270" />
+              </div>
+              <div class="team-info">
+                <h3 class="team-title">Robert Jakis</h3>
+                <p class="specialization">Marketing</p>
+                <ul class="social-network">
+                  <li class="social-img">
+                    <a href=""
+                      ><img
+                        src="./images/instagram.svg"
+                        alt="ссылка на инстаграм"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/tvitter.svg" alt="ссылка на твиттер"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/fasebook.svg" alt="ссылка на фейсбук"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/in.svg" alt="ссылка на линкедин"
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
-            <li>
-              <img src="./images/martin.jpg" alt="фото мартина" width="270" />
-              <h3 class="team-title">Martin Doe</h3>
-              <p class="specialization">UI Designer</p>
-              <ul>
-                <li>
-                  <a href="" aria-label="ссылка на инстаграм">instagram</a>
-                </li>
-                <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-                <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-                <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
-              </ul>
+            <li class="team-item">
+              <div class="team-photo">
+                <img src="./images/martin.jpg" alt="фото мартина" width="270" />
+              </div>
+              <div class="team-info">
+                <h3 class="team-title">Martin Doe</h3>
+                <p class="specialization">UI Designer</p>
+                <ul class="social-network">
+                  <li class="social-img">
+                    <a href=""
+                      ><img
+                        src="./images/instagram.svg"
+                        alt="ссылка на инстаграм"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/tvitter.svg" alt="ссылка на твиттер"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/fasebook.svg" alt="ссылка на фейсбук"
+                    /></a>
+                  </li>
+                  <li class="social-img">
+                    <a href=""
+                      ><img src="./images/in.svg" alt="ссылка на линкедин"
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
       </section>
 
-      <!-- Постоянные клиенты (нужно скрыть)-->
+      <!-- Постоянные клиенты -->
       <section class="client">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
@@ -237,15 +329,15 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="containerfooter">
         <div>
-          <a href="./index.html" class="logo"
+          <a href="./index.html"
             ><span class="logo-web">Web</span>
             <span class="logo-footstudio">Studio</span>
           </a>
 
           <address class="footaddres">
-            <ul class="footaddres list">
+            <ul class="footaddres-list">
               <li class="footaddres-local">г. Киев, пр-т Леси Украинки, 26</li>
               <li class="footaddres">info@devstudio.com</li>
               <li class="footaddres">+38 096 111 11 11</li>
@@ -255,23 +347,36 @@
 
         <div class="soсiallink">
           <h3 class="acall">присоединяйтесь</h3>
-          <ul class="list">
-            <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
-            <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-            <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-            <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
+          <ul class="social-footter">
+            <li class="social-img">
+              <a href=""
+                ><img src="./images/instagram.svg" alt="ссылка на инстаграм"
+              /></a>
+            </li>
+            <li class="social-img">
+              <a href=""
+                ><img src="./images/tvitter.svg" alt="ссылка на твиттер"
+              /></a>
+            </li>
+            <li class="social-img">
+              <a href=""
+                ><img src="./images/fasebook.svg" alt="ссылка на фейсбук"
+              /></a>
+            </li>
+            <li class="social-img">
+              <a href=""
+                ><img src="./images/in.svg" alt="ссылка на линкедин"
+              /></a>
+            </li>
           </ul>
         </div>
 
-        <div>
+        <div class="subscribe">
           <b class="acall">Подпишитесь на рассылку</b>
           <a href="" class="button">Подписаться</a>
         </div>
-
-        <p class="rights">
-          2020 | Developed by GoIT Students
-        </p>
       </div>
+      <small class="rights">2020 | Developed by GoIT Students</small>
     </footer>
   </body>
 </html>
