--- a/index.html
+++ b/index.html
@@ -40,16 +40,23 @@
           <address class="adress">
             <ul class="adress-nav list">
               <li class="item">
-                <a
-                  href="mailto:info@devstudio.com "
-                  class="adress-nav link"
-                  lang="en"
-                  >info@devstudio.com
-                </a>
+                <a href="mailto:info@devstudio.com" class="adress-nav link"
+                  ><img
+                    src="./images/mail.svg"
+                    alt="Иконка конверта"
+                    class="adress-icon"
+                  />
+                  info@devstudio.com</a
+                >
               </li>
               <li class="item">
-                <a href="tel:+380961111111" class="adress-nav link"
-                  >+38 096 111 11 11
+                <a href="tel:+380961111111" class="adress-nav link">
+                  <img
+                    src="./images/telephone01.svg"
+                    alt="телефон"
+                    class="adress-icon"
+                  />
+                  +38 096 111 11 11
                 </a>
               </li>
             </ul>
