--- a/portfolio.html
+++ b/portfolio.html
@@ -40,16 +40,23 @@
           <address class="adress">
             <ul class="adress-nav list">
               <li class="item">
-                <a
-                  href="mailto:info@devstudio.com "
-                  class="adress-nav link"
-                  lang="en"
-                  >info@devstudio.com
-                </a>
+                <a href="mailto:info@devstudio.com" class="adress-nav link"
+                  ><img
+                    src="./images/mail.svg"
+                    alt="Иконка конверта"
+                    class="adress-icon"
+                  />
+                  info@devstudio.com</a
+                >
               </li>
               <li class="item">
-                <a href="tel:+380961111111" class="adress-nav link"
-                  >+38 096 111 11 11
+                <a href="tel:+380961111111" class="adress-nav link">
+                  <img
+                    src="./images/telephone01.svg"
+                    alt="телефон"
+                    class="adress-icon"
+                  />
+                  +38 096 111 11 11
                 </a>
               </li>
             </ul>
@@ -62,170 +69,186 @@
       <!-- портфолио наши работы -->
       <section class="ourwork">
         <div class="container">
-          <!-- <h1>ourwork</h1> -->
+          <h1>ourwork</h1>
+          <!-- кнопки -->
           <ul class="button-nav list">
-            <li><button type="button" class="link">Все</button></li>
-            <li><button type="button" class="link">Веб-сайты</button></li>
-            <li><button type="button" class="link">Приложения</button></li>
-            <li><button type="button" class="link">Дизайн</button></li>
-            <li><button type="button" class="link">Маркетинг</button></li>
-          </ul>
-          <ul class="ourwork list">
-            <li>
-              <a href=""
-                ><img src="./images/portfolio-noutbook.jpg" alt="ноубук" />
-                <h3 class="ourwork-title">Технокряк</h3>
-                <p class="ourwork-direction">Веб-сайт</p>
-                <p class="ourwork-explanation">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+            <li class="filter-item">
+              <button type="button" class="button-link">Все</button>
             </li>
-            <li>
-              <a href=""
-                ><img
-                  src="./images/portfolio-bascket.jpg"
-                  alt="баскетболист"
-                  width="370"
-                />
-                <h3 class="ourwork-title">Постер New Orlean vs Golden Star</h3>
-                <p class="ourwork-direction">Дизайн</p>
-                <p class="ourwork-explanation">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+            <li class="filter-item">
+              <button type="button" class="button-link">Веб-сайты</button>
             </li>
-            <li>
-              <a href=""
-                ><img
-                  src="./images/portfolio-fish.jpg"
-                  alt="морская еда"
-                  width="370"
-                />
-                <h3 class="ourwork-title">Ресторан Seafood</h3>
-                <p class="ourwork-direction">Приложение</p>
-                <p class="ourwork-explanation">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+            <li class="filter-item">
+              <button type="button" class="button-link">Приложения</button>
             </li>
-            <li>
-              <a href=""
-                ><img
-                  src="./images/portfolio-headphones.jpg"
-                  alt="наушники"
-                  width="370"
-                />
-                <h3 class="ourwork-title">Проект Prime</h3>
-                <p class="ourwork-direction">Маркетинг</p>
-                <p class="ourwork-explanation">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+            <li class="filter-item">
+              <button type="button" class="button-link">Дизайн</button>
             </li>
-            <li>
-              <a href=""
-                ><img
-                  src="./images/portfolio-boxes.jpg"
-                  alt="коробки"
-                  width="370"
-                />
-                <h3 class="ourwork-title">Проект Boxes</h3>
-                <p class="ourwork-direction">Приложение</p>
-                <p class="ourwork-explanation">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href=""
-                ><img
-                  src="./images/portfolio-imac.jpg"
-                  alt="аймак"
-                  width="370"
-                />
-                <h3 class="ourwork title">Inspiration has no Borders</h3>
-                <p class="ourwork-direction">Веб-сайт</p>
-                <p class="ourwork-explanation">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href=""
-                ><img
-                  src="./images/portfolio-magazine.jpg"
-                  alt="журнал"
-                  width="370"
-                />
-                <h3 class="ourwork-title">Издание Limited Edition</h3>
-                <p class="ourwork-direction">Дизайн</p>
-                <p class="ourwork-explanation">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href=""
-                ><img
-                  src="./images/portfolio-lable.jpg"
-                  alt="итикетка"
-                  width="370"
-                />
-                <h3 class="ourwork-title">Проект LAB</h3>
-                <p class="ourwork-direction">Маркетинг</p>
-                <p class="ourwork-explanation">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href=""
-                ><img
-                  src="./images/portfolio-heandlaptop.jpg"
-                  alt="лептоп"
-                  width="370"
-                />
-                <h3 class="ourwork-title">Growing Business</h3>
-                <p class="ourwork-direction">Приложение</p>
-                <p class="ourwork-explanation">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+            <li class="filter-item">
+              <button type="button" class="button-link">Маркетинг</button>
             </li>
           </ul>
+          <!-- список -->
+          <div class="ourwork-contriner">
+            <ul class="ourwork-list">
+              <li class="ourwork-element">
+                <a href=""
+                  ><img src="./images/portfolio-noutbook.jpg" alt="ноубук" />
+                  <h3 class="ourwork-title">Технокряк</h3>
+                  <p class="ourwork-direction">Веб-сайт</p>
+                  <p class="ourwork-explanation">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li class="ourwork-element">
+                <a href=""
+                  ><img
+                    src="./images/portfolio-bascket.jpg"
+                    alt="баскетболист"
+                    width="370"
+                  />
+                  <h3 class="ourwork-title">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="ourwork-direction">Дизайн</p>
+                  <p class="ourwork-explanation">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li class="ourwork-element">
+                <a href=""
+                  ><img
+                    src="./images/portfolio-fish.jpg"
+                    alt="морская еда"
+                    width="370"
+                  />
+                  <h3 class="ourwork-title">Ресторан Seafood</h3>
+                  <p class="ourwork-direction">Приложение</p>
+                  <p class="ourwork-explanation">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li class="ourwork-element">
+                <a href=""
+                  ><img
+                    src="./images/portfolio-headphones.jpg"
+                    alt="наушники"
+                    width="370"
+                  />
+                  <h3 class="ourwork-title">Проект Prime</h3>
+                  <p class="ourwork-direction">Маркетинг</p>
+                  <p class="ourwork-explanation">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li class="ourwork-element">
+                <a href=""
+                  ><img
+                    src="./images/portfolio-boxes.jpg"
+                    alt="коробки"
+                    width="370"
+                  />
+                  <h3 class="ourwork-title">Проект Boxes</h3>
+                  <p class="ourwork-direction">Приложение</p>
+                  <p class="ourwork-explanation">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li class="ourwork-element">
+                <a href=""
+                  ><img
+                    src="./images/portfolio-imac.jpg"
+                    alt="аймак"
+                    width="370"
+                  />
+                  <h3 class="ourwork title">Inspiration has no Borders</h3>
+                  <p class="ourwork-direction">Веб-сайт</p>
+                  <p class="ourwork-explanation">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li class="ourwork-element">
+                <a href=""
+                  ><img
+                    src="./images/portfolio-magazine.jpg"
+                    alt="журнал"
+                    width="370"
+                  />
+                  <h3 class="ourwork-title">Издание Limited Edition</h3>
+                  <p class="ourwork-direction">Дизайн</p>
+                  <p class="ourwork-explanation">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li class="ourwork-element">
+                <a href=""
+                  ><img
+                    src="./images/portfolio-lable.jpg"
+                    alt="итикетка"
+                    width="370"
+                  />
+                  <h3 class="ourwork-title">Проект LAB</h3>
+                  <p class="ourwork-direction">Маркетинг</p>
+                  <p class="ourwork-explanation">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li class="ourwork-element">
+                <a href=""
+                  ><img
+                    src="./images/portfolio-heandlaptop.jpg"
+                    alt="лептоп"
+                    width="370"
+                  />
+                  <h3 class="ourwork-title">Growing Business</h3>
+                  <p class="ourwork-direction">Приложение</p>
+                  <p class="ourwork-explanation">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="containerfooter">
         <div>
-          <a href="./index.html" class="logo"
+          <a href="./index.html"
             ><span class="logo-web">Web</span>
             <span class="logo-footstudio">Studio</span>
           </a>
 
           <address class="footaddres">
-            <ul class="footaddres list">
+            <ul class="footaddres-list">
               <li class="footaddres-local">г. Киев, пр-т Леси Украинки, 26</li>
               <li class="footaddres">info@devstudio.com</li>
               <li class="footaddres">+38 096 111 11 11</li>
@@ -235,23 +258,36 @@
 
         <div class="soсiallink">
           <h3 class="acall">присоединяйтесь</h3>
-          <ul class="list">
-            <li><a href="" aria-label="ссылка на инстаграм">instagram</a></li>
-            <li><a href="" aria-label="ссылка на твиттер">tvitter</a></li>
-            <li><a href="" aria-label="ссылка на фейсбук">facebook</a></li>
-            <li><a href="" aria-label="ссылка на линкедин">linkedin</a></li>
+          <ul class="social-footter">
+            <li class="social-img">
+              <a href=""
+                ><img src="./images/instagram.svg" alt="ссылка на инстаграм"
+              /></a>
+            </li>
+            <li class="social-img">
+              <a href=""
+                ><img src="./images/tvitter.svg" alt="ссылка на твиттер"
+              /></a>
+            </li>
+            <li class="social-img">
+              <a href=""
+                ><img src="./images/fasebook.svg" alt="ссылка на фейсбук"
+              /></a>
+            </li>
+            <li class="social-img">
+              <a href=""
+                ><img src="./images/in.svg" alt="ссылка на линкедин"
+              /></a>
+            </li>
           </ul>
         </div>
 
-        <div>
+        <div class="subscribe">
           <b class="acall">Подпишитесь на рассылку</b>
           <a href="" class="button">Подписаться</a>
         </div>
-
-        <p class="rights">
-          2020 | Developed by GoIT Students
-        </p>
       </div>
+      <small class="rights">2020 | Developed by GoIT Students</small>
     </footer>
   </body>
 </html>
