--- a/index.html
+++ b/index.html
@@ -34,34 +34,34 @@
             </li>
             <li class="item"><a href="" class="site-nav link">Контакты</a></li>
           </ul>
-
-          <!-- адрес -->
-
-          <address class="adress">
-            <ul class="adress-nav list">
-              <li class="item">
-                <a href="mailto:info@devstudio.com" class="adress-nav link"
-                  ><img
-                    src="./images/mail.svg"
-                    alt="Иконка конверта"
-                    class="adress-icon"
-                  />
-                  info@devstudio.com</a
-                >
-              </li>
-              <li class="item">
-                <a href="tel:+380961111111" class="adress-nav link">
-                  <img
-                    src="./images/telephone01.svg"
-                    alt="телефон"
-                    class="adress-icon"
-                  />
-                  +38 096 111 11 11
-                </a>
-              </li>
-            </ul>
-          </address>
         </nav>
+      </div>
+      <!-- адрес -->
+      <div class="container">
+        <address class="adress">
+          <ul class="adress-nav list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="adress-nav link"
+                ><img
+                  src="./images/mail.svg"
+                  alt="Иконка конверта"
+                  class="adress-icon"
+                />
+                info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="adress-nav link">
+                <img
+                  src="./images/telephone01.svg"
+                  alt="телефон"
+                  class="adress-icon"
+                />
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
 
@@ -83,7 +83,11 @@
           <h2 class="section-hide">наши преимущества</h2>
           <ul class="advantages list">
             <li class="item">
-              <img src="./images/satelite-dish.svg" alt="спутниковая антена" />
+              <img
+                class="advantageimg"
+                src="./images/satelite-dish.svg"
+                alt="спутниковая антена"
+              />
               <h3 class="title">Внимание к деталям</h3>
               <p class="description">
                 Идейные соображения, а также начало повседневной работы по
@@ -91,7 +95,7 @@
               </p>
             </li>
             <li class="item">
-              <img src="./images/clock.svg" alt="часы" />
+              <img class="advantageimg" src="./images/clock.svg" alt="часы" />
               <h3 class="title">Пунктуальность</h3>
               <p class="description">
                 Задача организации, в особенности же рамки и место обучения
@@ -99,7 +103,11 @@
               </p>
             </li>
             <li class="item">
-              <img src="./images/diagram.svg" alt="диаграмма" />
+              <img
+                class="advantageimg"
+                src="./images/diagram.svg"
+                alt="диаграмма"
+              />
               <h3 class="title">Планирование</h3>
               <p class="description">
                 Равным образом консультация с широким активом в значительной
@@ -107,7 +115,11 @@
               </p>
             </li>
             <li class="item">
-              <img src="./images/astronaut.svg" alt="астронавт" />
+              <img
+                class="advantageimg"
+                src="./images/astronaut.svg"
+                alt="астронавт"
+              />
               <h3 class="title">Современные технологии</h3>
               <p class="description">
                 Значимость этих проблем настолько очевидна, что реализация
