--- a/portfolio.html
+++ b/portfolio.html
@@ -34,34 +34,34 @@
             </li>
             <li class="item"><a href="" class="site-nav link">Контакты</a></li>
           </ul>
-
-          <!-- адрес -->
-
-          <address class="adress">
-            <ul class="adress-nav list">
-              <li class="item">
-                <a href="mailto:info@devstudio.com" class="adress-nav link"
-                  ><img
-                    src="./images/mail.svg"
-                    alt="Иконка конверта"
-                    class="adress-icon"
-                  />
-                  info@devstudio.com</a
-                >
-              </li>
-              <li class="item">
-                <a href="tel:+380961111111" class="adress-nav link">
-                  <img
-                    src="./images/telephone01.svg"
-                    alt="телефон"
-                    class="adress-icon"
-                  />
-                  +38 096 111 11 11
-                </a>
-              </li>
-            </ul>
-          </address>
         </nav>
+      </div>
+      <!-- адрес -->
+      <div class="container">
+        <address class="adress">
+          <ul class="adress-nav list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="adress-nav link"
+                ><img
+                  src="./images/mail.svg"
+                  alt="Иконка конверта"
+                  class="adress-icon"
+                />
+                info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="adress-nav link">
+                <img
+                  src="./images/telephone01.svg"
+                  alt="телефон"
+                  class="adress-icon"
+                />
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
 
