--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,11 @@
             <ul class="ourwork-list">
               <li class="ourwork-element">
                 <a href=""
-                  ><img src="./images/portfolio-noutbook.jpg" alt="ноубук" />
+                  ><img
+                    class="ourwork-img"
+                    src="./images/portfolio-noutbook.jpg"
+                    alt="ноубук"
+                  />
                   <h3 class="ourwork-title">Технокряк</h3>
                   <p class="ourwork-direction">Веб-сайт</p>
                   <p class="ourwork-explanation">
@@ -106,6 +110,7 @@
               <li class="ourwork-element">
                 <a href=""
                   ><img
+                    class="ourwork-img"
                     src="./images/portfolio-bascket.jpg"
                     alt="баскетболист"
                     width="370"
@@ -124,6 +129,7 @@
               <li class="ourwork-element">
                 <a href=""
                   ><img
+                    class="ourwork-img"
                     src="./images/portfolio-fish.jpg"
                     alt="морская еда"
                     width="370"
@@ -140,6 +146,7 @@
               <li class="ourwork-element">
                 <a href=""
                   ><img
+                    class="ourwork-img"
                     src="./images/portfolio-headphones.jpg"
                     alt="наушники"
                     width="370"
@@ -156,6 +163,7 @@
               <li class="ourwork-element">
                 <a href=""
                   ><img
+                    class="ourwork-img"
                     src="./images/portfolio-boxes.jpg"
                     alt="коробки"
                     width="370"
@@ -172,11 +180,12 @@
               <li class="ourwork-element">
                 <a href=""
                   ><img
+                    class="ourwork-img"
                     src="./images/portfolio-imac.jpg"
                     alt="аймак"
                     width="370"
                   />
-                  <h3 class="ourwork title">Inspiration has no Borders</h3>
+                  <h3 class="ourwork-title">Inspiration has no Borders</h3>
                   <p class="ourwork-direction">Веб-сайт</p>
                   <p class="ourwork-explanation">
                     Технокряк это современная площадка распространения
@@ -188,6 +197,7 @@
               <li class="ourwork-element">
                 <a href=""
                   ><img
+                    class="ourwork-img"
                     src="./images/portfolio-magazine.jpg"
                     alt="журнал"
                     width="370"
@@ -204,6 +214,7 @@
               <li class="ourwork-element">
                 <a href=""
                   ><img
+                    class="ourwork-img"
                     src="./images/portfolio-lable.jpg"
                     alt="итикетка"
                     width="370"
@@ -220,6 +231,7 @@
               <li class="ourwork-element">
                 <a href=""
                   ><img
+                    class="ourwork-img"
                     src="./images/portfolio-heandlaptop.jpg"
                     alt="лептоп"
                     width="370"
