--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Web-Studio</title>
+    <title>Студия</title>
   </head>
 
   <body>
@@ -31,13 +31,12 @@
         <ul class="contacts-list">
           <li class="contacts-item">
             <a href="mailto:info@devstudio.com"
-              ><img src="./images/mail.svg" alt="Kонверт" />
-              info@devstudio.com</a
+              ><img src="./images/mail.svg" alt="емейл" /> info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
             <a href="tel:+380961111111"
-              ><img src="./images/telephone01.svg" alt="Телефон" /> +38 096 111
+              ><img src="./images/telephone01.svg" alt="телефон" /> +38 096 111
               11 11</a
             >
           </li>
@@ -102,7 +101,7 @@
           </ul>
         </div>
       </section>
-      <!-- Wedo -->
+      <!-- Wedoit -->
       <section class="wedoit">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
@@ -149,23 +148,21 @@
                 <ul class="social">
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/instagram.svg" alt="Иконка Инстаграм"
+                      ><img src="./images/instagram.svg" alt="Инстаграм"
                     /></a>
                   </li>
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/tvitter.svg" alt="Иконка Твиттер"
+                      ><img src="./images/tvitter.svg" alt="Твиттер"
                     /></a>
                   </li>
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/fasebook.svg" alt="Иконка Фейсбук"
+                      ><img src="./images/fasebook.svg" alt="Фейсбук"
                     /></a>
                   </li>
                   <li class="social-item">
-                    <a href=""
-                      ><img src="./images/in.svg" alt="Иконка Линкедин"
-                    /></a>
+                    <a href=""><img src="./images/in.svg" alt="Линкедин" /></a>
                   </li>
                 </ul>
               </div>
@@ -180,23 +177,21 @@
                 <ul class="social">
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/instagram.svg" alt="Иконка Инстаграм"
+                      ><img src="./images/instagram.svg" alt="Инстаграм"
                     /></a>
                   </li>
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/tvitter.svg" alt="Иконка Твиттер"
+                      ><img src="./images/tvitter.svg" alt="Твиттер"
                     /></a>
                   </li>
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/fasebook.svg" alt="Иконка Фейсбук"
+                      ><img src="./images/fasebook.svg" alt="Фейсбук"
                     /></a>
                   </li>
                   <li class="social-item">
-                    <a href=""
-                      ><img src="./images/in.svg" alt="Иконка Линкедин"
-                    /></a>
+                    <a href=""><img src="./images/in.svg" alt="Линкедин" /></a>
                   </li>
                 </ul>
               </div>
@@ -211,23 +206,21 @@
                 <ul class="social">
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/instagram.svg" alt="Иконка Инстаграм"
+                      ><img src="./images/instagram.svg" alt="Инстаграм"
                     /></a>
                   </li>
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/tvitter.svg" alt="Иконка Твиттер"
+                      ><img src="./images/tvitter.svg" alt="Твиттер"
                     /></a>
                   </li>
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/fasebook.svg" alt="Иконка Фейсбук"
+                      ><img src="./images/fasebook.svg" alt="Фейсбук"
                     /></a>
                   </li>
                   <li class="social-item">
-                    <a href=""
-                      ><img src="./images/in.svg" alt="Иконка Линкедин"
-                    /></a>
+                    <a href=""><img src="./images/in.svg" alt="Линкедин" /></a>
                   </li>
                 </ul>
               </div>
@@ -242,23 +235,21 @@
                 <ul class="social">
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/instagram.svg" alt="Иконка Инстаграм"
+                      ><img src="./images/instagram.svg" alt="Инстаграм"
                     /></a>
                   </li>
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/tvitter.svg" alt="Иконка Твиттер"
+                      ><img src="./images/tvitter.svg" alt="Твиттер"
                     /></a>
                   </li>
                   <li class="social-item">
                     <a href=""
-                      ><img src="./images/fasebook.svg" alt="Иконка Фейсбук"
+                      ><img src="./images/fasebook.svg" alt="Фейсбук"
                     /></a>
                   </li>
                   <li class="social-item">
-                    <a href=""
-                      ><img src="./images/in.svg" alt="Иконка Линкедин"
-                    /></a>
+                    <a href=""><img src="./images/in.svg" alt="Линкедин" /></a>
                   </li>
                 </ul>
               </div>
@@ -309,34 +300,29 @@
             </ul>
           </address>
         </div>
-        <div class="join-social">
-          <p class="join">Присоединяйтесь</p>
+        <div class="subscribe-social">
+          <p class="subscribe">Присоединяйтесь</p>
           <ul class="social">
             <li class="social-item">
               <a href=""
-                ><img src="./images/instagram.svg" alt="Иконка Инстаграм"
+                ><img src="./images/instagram.svg" alt="Инстаграм"
               /></a>
             </li>
             <li class="social-item">
-              <a href=""
-                ><img src="./images/tvitter.svg" alt="Иконка Твиттер"
-              /></a>
+              <a href=""><img src="./images/tvitter.svg" alt="Твиттер" /></a>
             </li>
             <li class="social-item">
-              <a href=""
-                ><img src="./images/fasebook.svg" alt="Иконка Фейсбук"
-              /></a>
+              <a href=""><img src="./images/fasebook.svg" alt="Фейсбук" /></a>
             </li>
             <li class="social-item">
-              <a href=""><img src="./images/in.svg" alt="Иконка Линкедин" /></a>
+              <a href=""><img src="./images/in.svg" alt="Линкедин" /></a>
             </li>
           </ul>
         </div>
-        <div class="join-form">
-          <p class="join">Подпишитесь на рассылку</p>
+        <div class="subscribe-form">
+          <p class="subscribe">Подпишитесь на рассылку</p>
         </div>
       </div>
-      <small class="copy">2020 | Developed by GoIT Students</small>
     </footer>
   </body>
 </html>
