--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Portfolio</title>
+    <title>Портфолиo</title>
   </head>
 
   <body>
@@ -33,14 +33,13 @@
         <ul class="contacts-list">
           <li class="contacts-item">
             <a href="mailto:info@devstudio.com"
-              ><img src="./images/mail.svg" alt="Иконка конверта" />
-              info@devstudio.com</a
+              ><img src="./images/mail.svg" alt="емейл" /> info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
             <a href="tel:+380961111111"
-              ><img src="./images/telephone01.svg" alt="Иконка телефона" /> +38
-              096 111 11 11</a
+              ><img src="./images/telephone01.svg" alt="телефон" /> +38 096 111
+              11 11</a
             >
           </li>
         </ul>
@@ -51,6 +50,7 @@
         <div class="container">
           <h1>Наши работы</h1>
           <!-- Скрыть заголовок -->
+          <!-- кнопки -->
           <ul class="filters-list">
             <li class="filters-item">
               <button type="button" class="button shadow">Все</button>
@@ -68,6 +68,7 @@
               <button type="button" class="button shadow">Маркетинг</button>
             </li>
           </ul>
+          <!-- список -->
           <ul class="works">
             <li class="works-item">
               <a class="item-link" href="#">
@@ -260,8 +261,8 @@
             </ul>
           </address>
         </div>
-        <div class="join-social">
-          <p class="join">Присоединяйтесь</p>
+        <div class="subscribe-social">
+          <p class="subscribe">Присоединяйтесь</p>
           <ul class="social">
             <li class="social-item">
               <a href=""
@@ -283,11 +284,10 @@
             </li>
           </ul>
         </div>
-        <div class="join-form">
-          <p class="join">Подпишитесь на рассылку</p>
+        <div class="subscribe-form">
+          <p class="subscribe">Подпишитесь на рассылку</p>
         </div>
       </div>
-      <small class="copy">2020 | Developed by GoIT Students</small>
     </footer>
   </body>
 </html>
