--- a/portfolio.html
+++ b/portfolio.html
@@ -287,6 +287,9 @@
         <div class="subscribe-form">
           <p class="subscribe">Подпишитесь на рассылку</p>
         </div>
+        <div class="footbutton">
+          <button type="button" class="button main">Подписаться</button>
+        </div>
       </div>
     </footer>
   </body>
