--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <body>
     <header>
       <div class="container">
-        <p class="logo" id="top"><span class="active">Web</span>Studio</p>
+        <a href="./index.html" class="logo" id="top"
+          ><span class="active">Web</span> Studio</a
+        >
         <nav class="navigation">
           <ul class="nav-list">
             <li class="nav-item active">
@@ -60,7 +62,12 @@
           <ul class="features-list">
             <li class="features-item">
               <div class="item-image">
-                <img src="./images/satelite-dish.svg" alt="Антенны" />
+                <img
+                  src="./images/satelite-dish.svg"
+                  alt="Антенны"
+                  width="270 px"
+                  height="120px"
+                />
               </div>
               <h3 class="item-title">Внимание к деталям</h3>
               <p class="item-text">
@@ -287,7 +294,7 @@
     <footer>
       <div class="container">
         <div>
-          <a class="logo" href=""><span class="active">Web</span>Studio</a>
+          <a class="logo" href=""><span class="active">Web</span> Studio</a>
           <address class="address">
             <ul class="address-list">
               <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
