--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
   <body>
     <header>
       <div class="container">
-        <a class="logo" id="top" href="./index.html"
-          ><span class="active">Web</span>Studio</a
+        <a href="./index.html" class="logo" id="top"
+          ><span class="active">Web</span> Studio</a
         >
         <nav class="navigation">
           <ul class="nav-list">
@@ -248,7 +248,7 @@
     <footer>
       <div class="container">
         <div>
-          <a class="logo" href=""><span class="active">Web</span>Studio</a>
+          <a class="logo" href=""><span class="active">Web</span> Studio</a>
           <address class="address">
             <ul class="address-list">
               <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
